force-app/main/default/objects/Opportunity/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area</valueSetName>
    </valueSet>
</CustomField>