force-app/main/default/objects/Opportunity/fields/Last_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Status__c</fullName>
    <label>Last Project Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>