force-app/main/default/objects/Opportunity/fields/Last_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Date__c</fullName>
    <description>Updated when new status is created</description>
    <label>Last Status Date</label>
    <type>Date</type>
</CustomField>