force-app/main/default/objects/Opportunity/fields/Number_Managers__c.field-meta.xml
<CustomField>
    <fullName>Number_Managers__c</fullName>
    <description>The number of salesforce managers</description>
    <label>Number of Managers</label>
    <summaryForeignKey>Managers_Assignment__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>