force-app/main/default/objects/Opportunity/fields/Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources__c</fullName>
    <label>Number of Resources</label>
    <summaryFilterItems>
        <field>Employee_Assignment__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Assignment__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>