force-app/main/default/objects/Opportunity/fields/Short_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Short_Start_Date__c</fullName>
    <formula>LPAD(TEXT(MONTH( Start_Date__c )),2,&quot;0&quot;) + &quot;/&quot; +
LPAD(TEXT(DAY( Start_Date__c )),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Start Date</label>
    <type>Text</type>
</CustomField>