force-app/main/default/objects/Opportunity/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <label>Sub Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>