force-app/main/default/objects/Opportunity/recordTypes/Billable.recordType-meta.xml
<RecordType>
    <fullName>Billable</fullName>
    <active>true</active>
    <businessProcess>Altimetrik</businessProcess>
    <label>Billable</label>
</RecordType>