force-app/main/default/objects/Opportunity/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <businessProcess>Altimetrik</businessProcess>
    <label>Internal</label>
</RecordType>